--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <div class="logo-bar">
                 <h1>Timeline</h1>
+                <h3>Checking new branch system</h3>
             </div>        
         </header>
         <section class="timeline">
